crates/uitest/fixtures/ty_check/immutable_contract_field_init.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/immutable_contract_field_init.fe
---
error[8-0084]: memory-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:200:10
    │
200 │     ptr: std::evm::MemPtr<u256>
    │          ^^^^^^^^^^^^^^^^^^^^^^ `ptr` has a memory-backed contract field type
    │
    = memory handles cannot be persisted as contract fields; use a plain immutable field for code-backed data or a plain `mut` field for storage-backed state

error[8-0084]: calldata-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:204:10
    │
204 │     ptr: std::evm::CalldataPtr<u256>
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr` has a calldata-backed contract field type
    │
    = calldata belongs to one call and has no stable contract-field location; access receive arguments or calldata handles locally instead

error[8-0084]: memory-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:308:10
    │
308 │     ptr: std::evm::MemPtr<()>
    │          ^^^^^^^^^^^^^^^^^^^^ `ptr` has a memory-backed contract field type
    │
    = memory handles cannot be persisted as contract fields; use a plain immutable field for code-backed data or a plain `mut` field for storage-backed state

error[8-0084]: calldata-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:312:10
    │
312 │     ptr: std::evm::CalldataPtr<()>
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr` has a calldata-backed contract field type
    │
    = calldata belongs to one call and has no stable contract-field location; access receive arguments or calldata handles locally instead

error[8-0084]: memory-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:316:10
    │
316 │     ptr: std::evm::MemPtr<Empty>
    │          ^^^^^^^^^^^^^^^^^^^^^^^ `ptr` has a memory-backed contract field type
    │
    = memory handles cannot be persisted as contract fields; use a plain immutable field for code-backed data or a plain `mut` field for storage-backed state

error[8-0084]: calldata-backed contract fields are not supported
    ┌─ immutable_contract_field_init.fe:320:10
    │
320 │     ptr: std::evm::CalldataPtr<Empty>
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr` has a calldata-backed contract field type
    │
    = calldata belongs to one call and has no stable contract-field location; access receive arguments or calldata handles locally instead

error[8-0086]: immutable contract field is not initialized
  ┌─ immutable_contract_field_init.fe:2:5
  │
2 │     x: u256
  │     ^ `x` must be assigned in `init` on every successful path
  │
  = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
  ┌─ immutable_contract_field_init.fe:6:5
  │
6 │     x: u256
  │     ^ `x` must be assigned in `init` on every successful path
7 │
8 │     init() {}
  │            -- this init block may finish without assigning `x`
  │
  = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
   ┌─ immutable_contract_field_init.fe:12:5
   │
12 │     x: u256
   │     ^ `x` must be assigned in `init` on every successful path
13 │
14 │     init() uses (mut x) {}
   │                         -- this init block may finish without assigning `x`
   │
   = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
   ┌─ immutable_contract_field_init.fe:18:5
   │
18 │       x: u256
   │       ^ `x` must be assigned in `init` on every successful path
19 │
20 │       init(flag: bool) uses (mut x) {
   │ ╭───────────────────────────────────'
21 │ │         if flag {
22 │ │             x = 1
23 │ │         }
24 │ │     }
   │ ╰─────' this init block may finish without assigning `x`
   │
   = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:136:5
    │
136 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
137 │
138 │       init(flag: bool, v: u256) uses (mut x) {
    │ ╭────────────────────────────────────────────'
139 │ │         while flag {
140 │ │             x = v
141 │ │         }
142 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:146:5
    │
146 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
147 │
148 │       init(v: u256) uses (mut x) {
    │ ╭────────────────────────────────'
149 │ │         let b = true
150 │ │         while let false = b {
151 │ │             x = v
152 │ │             break
153 │ │         }
154 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:158:5
    │
158 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
159 │
160 │       init(v: u256) uses (mut x) {
    │ ╭────────────────────────────────'
161 │ │         let mut run = true
162 │ │         for _ in 0..1 {
163 │ │             run = false
    · │
168 │ │         }
169 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:173:5
    │
173 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
    ·
176 │       init(v: u256) uses (mut x, mut i) {
    │ ╭───────────────────────────────────────'
177 │ │         i = 0
178 │ │         while i < 1 {
179 │ │             x = v
180 │ │             i += 1
181 │ │         }
182 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:186:5
    │
186 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
    ·
189 │       init(v: u256) uses (mut x, mut i) {
    │ ╭───────────────────────────────────────'
190 │ │         i = 0
191 │ │         while i < 1 {
192 │ │             x = v
    · │
195 │ │         }
196 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:220:5
    │
220 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
221 │
222 │       init() uses (mut x) {
    │ ╭─────────────────────────'
223 │ │         own_write(v: x)
224 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:228:5
    │
228 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
    ·
231 │       init() uses (mut x, mut i) {
    │ ╭────────────────────────────────'
232 │ │         i = 0
233 │ │         while i < 2 {
234 │ │             i += 1
235 │ │         }
236 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:244:5
    │
244 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
    ·
247 │       init(v: bool) uses (mut x, mut flag) {
    │ ╭──────────────────────────────────────────'
248 │ │         init_flag(v: v)
249 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:262:5
    │
262 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
263 │
264 │       init(v: u256) uses (mut x) {
    │ ╭────────────────────────────────'
265 │ │         let mut b = true
266 │ │         let r = mut b
267 │ │         r = false
    · │
270 │ │         }
271 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage

error[8-0086]: immutable contract field is not initialized
    ┌─ immutable_contract_field_init.fe:279:5
    │
279 │       x: u256
    │       ^ `x` must be assigned in `init` on every successful path
280 │
281 │       init(v: u256) uses (mut x) {
    │ ╭────────────────────────────────'
282 │ │         let mut b = true
283 │ │         make_false(b: mut b)
284 │ │         if b {
285 │ │             x = v
286 │ │         }
287 │ │     }
    │ ╰─────' this init block may finish without assigning `x`
    │
    = assign `x` in `init` with `uses (mut x)`, or mark the field `mut` to store it in contract storage
